WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261211
Unreviewed, fix catalyst build
https://bugs.webkit.org/show_bug.cgi?id=261211
Summary
Unreviewed, fix catalyst build
Chris Dumez
Reported
2023-09-06 10:18:29 PDT
Unreviewed, fix catalyst build.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-09-06 10:19:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17489
EWS
Comment 2
2023-09-06 10:22:18 PDT
Committed
267680@main
(663e5ddde8a7): <
https://commits.webkit.org/267680@main
> Reviewed commits have been landed. Closing PR #17489 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-09-06 10:23:14 PDT
<
rdar://problem/115063204
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug