Unreviewed, fix catalyst build https://bugs.webkit.org/show_bug.cgi?id=261211

* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView createVisibleContentRectUpdateInfoFromVisibleRect:unobscuredRect:contentInsets:unobscuredRectInScrollViewCoordinates:obscuredInsets:unobscuredSafeAreaInsets:inputViewBounds:scale:minimumScale:viewStability:enclosedInScrollableAncestorView:sendEvenIfUnchanged:]):

Canonical link: https://commits.webkit.org/267680@main